# miniDiffuLLaMA

./: README.md  attention.py  data.py  data_prep.py  discrete_diffusion_sudoku.ipynb  eval.py  pyproject.toml  train.py
eval_data/: README.md
